# LinuxDev2024

01_TerminalProject/: Makefile  Show  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  script1.py  script2.py  test1_answer  test2_answer
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protect.c
07_Environmental/: .gitignore  Makefile.am  configure.ac  rhasher.c
08_I18n/: .gitignore  Makefile.am  configure.ac
08_I18n/po/: ru.po
08_I18n/src/: guess.c
09_PatchDiff/: 0001-Add-first-argument.patch  0002-Add-custom-walls-and-passways.patch  0003-Add-seed-as-argument.patch  Makefile  lab.c
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  grow.h  libgcov_abort.c  libgrow.c
10_LibTesting/tests/: Makefile.am  tests.c
11_Documenting/: Makefile.am  configure.ac
11_Documenting/po/: POTFILES.in
11_Documenting/src/: Makefile.am  guess.c  roman.c  roman.h
12_InstallPackaging/: Doxyfile.in  Makefile.am  configure.ac
12_InstallPackaging/po/: ru.po
12_InstallPackaging/src/: Makefile.am  guess.c  roman.c  roman.h
12_InstallPackaging/tests/: Makefile.am  tests.c
